--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
         </div>
       </div>
     </div>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero__content">
+          <h1 class="hero-title">SHARE YOUR <br> HOLIDAY DREAM</h1>
+
+          <p class="hero-text">And find the perfect partner to fullfill it</p>
+
+          <button class="hero-btn">Find your holiday partner</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
